feat: add Header

--- a/index.html
+++ b/index.html
@@ -8,6 +8,26 @@
     <link rel="stylesheet" href="pages/index.css" />
   </head>
   <body class="page">
-    <h1 class="title">Frispes</h1>
+    <section class="hero main-content">
+      <header class="header">
+        <h1 class="header__name">Frispes.</h1>
+        <nav class="header__nav">
+          <ul class="header__list">
+            <li class="header__item">Home</li>
+            <li class="header__item header__item_active">Workspace</li>
+            <li class="header__item">Service</li>
+            <li class="header__item">Events</li>
+            <li class="header__item">Reviews</li>
+            <li class="header__item">Contact us</li>
+          </ul>
+        </nav>
+        <div class="header__buttons">
+          <button class="header__button">Log in</button>
+          <button class="header__button header__button_type_rectangle">
+            Sign up
+          </button>
+        </div>
+      </header>
+    </section>
   </body>
 </html>
