feat: add Hero block

--- a/index.html
+++ b/index.html
@@ -28,6 +28,25 @@
           </button>
         </div>
       </header>
+      <div class="hero__header">
+        <h2 class="hero__title">Introducing</h2>
+        <hr class="hero__line" />
+      </div>
+      <div class="hero__content">
+        <h3 class="hero__subtitle">
+          <span>Revolutionary</span> co-working space to realize your innovation
+        </h3>
+        <p class="hero__text">
+          In frispes, we spearhead new initiatives and provide mentorship to a
+          new startup, and help grow their opportunities in key local, regional
+          and global markets
+        </p>
+      </div>
+      <img
+        src="./images/desks_in_the_office.png"
+        alt="Desks in the office"
+        class="hero__image"
+      />
     </section>
   </body>
 </html>
