feat: add Ourspace

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="pages/index.css" />
   </head>
   <body class="page">
-    <section class="hero main-content">
+    <section class="hero main-content page__margin-bottom-big">
       <header class="header">
         <h1 class="header__name">Frispes.</h1>
         <nav class="header__nav">
@@ -47,6 +47,68 @@
         alt="Desks in the office"
         class="hero__image"
       />
+    </section>
+    <section class="ourspace main-content page__margin-bottom-big">
+      <div class="ourspace__line">
+        <h2 class="ourspace__title">Our Spaces</h2>
+        <p class="ourspace__text">
+          Our space is designed to give you a different experience when working
+          with your team or personally
+        </p>
+        <div class="ourspace__buttons">
+          <button class="ourspace__button"></button>
+          <button class="ourspace__button ourspace__button_type_right"></button>
+        </div>
+      </div>
+      <div class="ourspace__gallery">
+        <div class="ourspace__slide">
+          <img
+            class="ourspace__image"
+            src="./images/people_are_in_the_office.png"
+            alt="People are in the office"
+          />
+          <p class="ourspace__figcaption">Working with team</p>
+          <div class="ourspace__rectangle">
+            <img src="./images/small_arrow_right.svg" alt="small right arrow" />
+          </div>
+        </div>
+        <div class="ourspace__slide ourspace__slide_active">
+          <div class="ourspace__image">
+            <div class="ourspace__square"></div>
+            <h4>Private Space</h4>
+            <p>
+              Comfortable space, Full speed wifi, Free coffe & Snack and many
+              more
+            </p>
+          </div>
+          <div class="ourspace__rectangle ourspace__rectangle_size_big">
+            <p>Check avaibility</p>
+            <img src="./images/small_arrow_right.svg" alt="small right arrow" />
+          </div>
+        </div>
+        <div class="ourspace__slide">
+          <img
+            class="ourspace__image"
+            src="./images/person_is_in_the_office.png"
+            alt="Person is in the office"
+          />
+          <p class="ourspace__figcaption">Custom Office</p>
+          <div class="ourspace__rectangle">
+            <img src="./images/small_arrow_right.svg" alt="small right arrow" />
+          </div>
+        </div>
+        <!-- <div class="ourspace__slide">
+          <img
+            class="ourspace__image"
+            src="./images/people_are_in_the_office.png"
+            alt="People are in the office"
+          />
+          <p class="ourspace__figcaption">Working with team</p>
+          <div class="ourspace__rectangle">
+            <img src="./images/small_arrow_right.svg" alt="small right arrow" />
+          </div>
+        </div> -->
+      </div>
     </section>
   </body>
 </html>
