--- a/index.html
+++ b/index.html
@@ -109,6 +109,10 @@
           </div>
         </div> -->
       </div>
+      <div class="loader">
+        <div class="loader__line"><div></div></div>
+        <div class="loader__count"><span>01/</span>04</div>
+      </div>
     </section>
   </body>
 </html>
