refactor: create buttons-slider and title-line

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
           </button>
         </div>
       </header>
-      <div class="hero__header">
-        <h2 class="hero__title">Introducing</h2>
-        <hr class="hero__line" />
+      <div class="title-line">
+        <h2 class="title-line__title">Introducing</h2>
+        <hr class="title-line__line" />
       </div>
       <div class="hero__content">
         <h3 class="hero__subtitle">
@@ -55,9 +55,11 @@
           Our space is designed to give you a different experience when working
           with your team or personally
         </p>
-        <div class="ourspace__buttons">
-          <button class="ourspace__button"></button>
-          <button class="ourspace__button ourspace__button_type_right"></button>
+        <div class="buttons-slider">
+          <button class="buttons-slider__button"></button>
+          <button
+            class="buttons-slider__button buttons-slider__button_type_right"
+          ></button>
         </div>
       </div>
       <div class="ourspace__gallery">
