feat: add whyfrispes

--- a/index.html
+++ b/index.html
@@ -116,5 +116,91 @@
         <div class="loader__count"><span>01/</span>04</div>
       </div>
     </section>
+    <section class="whyfrispes main-content page__margin-bottom-big">
+      <div class="whyfrispes__items">
+        <div class="whyfrispes__items-column">
+          <div class="whyfrispes__item">
+            <img
+              class="whyfrispes__icon"
+              src="./images/meeting_room.svg"
+              alt="Meeting room icon"
+            />
+            <div class="whyfrispes__column">
+              <h4 class="whyfrispes__number">500+</h4>
+              <p class="whyfrispes__subtitle">Meeting rooms</p>
+            </div>
+          </div>
+          <div class="whyfrispes__item">
+            <img
+              class="whyfrispes__icon"
+              src="./images/flag.svg"
+              alt="Flag icon"
+            />
+            <div class="whyfrispes__column">
+              <h4 class="whyfrispes__number">60+</h4>
+              <p class="whyfrispes__subtitle">Countries</p>
+            </div>
+          </div>
+          <div class="whyfrispes__item">
+            <img
+              class="whyfrispes__icon"
+              src="./images/user.svg"
+              alt="User icon"
+            />
+            <div class="whyfrispes__column">
+              <h4 class="whyfrispes__number">5K+</h4>
+              <p class="whyfrispes__subtitle">Startup mentors</p>
+            </div>
+          </div>
+        </div>
+        <div class="whyfrispes__items-column">
+          <div class="whyfrispes__item">
+            <img
+              class="whyfrispes__icon"
+              src="./images/circus.svg"
+              alt="Circus icon"
+            />
+            <div class="whyfrispes__column">
+              <h4 class="whyfrispes__number">100+</h4>
+              <p class="whyfrispes__subtitle">Event spaces</p>
+            </div>
+          </div>
+          <div class="whyfrispes__item">
+            <img
+              class="whyfrispes__icon"
+              src="./images/wifi.svg"
+              alt="Wifi icon"
+            />
+            <div class="whyfrispes__column">
+              <h4 class="whyfrispes__number">500 Mbps</h4>
+              <p class="whyfrispes__subtitle">Internet speed</p>
+            </div>
+          </div>
+          <div class="whyfrispes__item">
+            <img
+              class="whyfrispes__icon"
+              src="./images/users.svg"
+              alt="Users icon"
+            />
+            <div class="whyfrispes__column">
+              <h4 class="whyfrispes__number">200+</h4>
+              <p class="whyfrispes__subtitle">Communities inside</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="whyfrispes__info">
+        <div class="title-line title-line_color_white">
+          <h2 class="title-line__title">Why Frispes</h2>
+          <hr class="title-line__line title-line__line_color_white" />
+        </div>
+        <h3 class="whyfrispes__title">We revolutionize your workspace</h3>
+        <p class="whyfrispes__text">
+          With a decade of insights and expertise, we're decided to reimagine
+          co-working space, designed to help a new startup grow up and realize
+          their ideas so they can give a positive impacts on many people
+        </p>
+      </div>
+    </section>
   </body>
 </html>
