feat: add facilites

--- a/index.html
+++ b/index.html
@@ -202,5 +202,24 @@
         </p>
       </div>
     </section>
+    <section class="facilites main-content page__margin-bottom-big">
+      <div class="title-line">
+        <h2 class="title-line__title">Our Facilities</h2>
+        <hr class="title-line__line" />
+      </div>
+      <h2 class="facilites__title">
+        All facilities are designed to meet all your needs
+      </h2>
+      <div class="facilites__content">
+        <ul class="facilites__list">
+          <li class="facilites__item">Spacious parking area</li>
+          <li class="facilites__item">Comfortable spaces</li>
+          <li class="facilites__item facilites__item_active">Cozy cafe</li>
+          <li class="facilites__item">Child playground</li>
+          <li class="facilites__item">Outdoor spaces</li>
+        </ul>
+        <img class="facilites__image" src="./images/bar.png" alt="Bar" />
+      </div>
+    </section>
   </body>
 </html>
