--- a/index.html
+++ b/index.html
@@ -221,5 +221,43 @@
         <img class="facilites__image" src="./images/bar.png" alt="Bar" />
       </div>
     </section>
+    <section class="uses main-content page__margin-bottom-big">
+      <h2 class="uses__title">Who uses Frispes?</h2>
+      <p class="uses__subtitle">
+        Big brands, small bussiness, new startuo and inividuals
+      </p>
+      <div class="uses__container">
+        <img
+          class="uses__image"
+          src="./images/logo_google.svg"
+          alt="Logo google"
+        />
+        <img
+          class="uses__image"
+          src="./images/logo_tokopedia.svg"
+          alt="Logo tokopedia"
+        />
+        <img
+          class="uses__image"
+          src="./images/logo_upwork.svg"
+          alt="Logo upwork"
+        />
+        <img
+          class="uses__image"
+          src="./images/logo_microsoft.svg"
+          alt="Logo microsoft"
+        />
+        <img
+          class="uses__image"
+          src="./images/logo_shopify.svg"
+          alt="Logo shopify"
+        />
+        <img
+          class="uses__image"
+          src="./images/logo_stripe.svg"
+          alt="Logo stripe"
+        />
+      </div>
+    </section>
   </body>
 </html>
