--- a/index.html
+++ b/index.html
@@ -259,5 +259,108 @@
         />
       </div>
     </section>
+    <footer class="footer">
+      <div class="footer__content main-content">
+        <div class="footer__info">
+          <h3 class="footer__title">Frispes</h3>
+          <p class="footer__text">
+            We offer comfortable spaces, cozy cafe, high-speed internet,
+            spacious parking area and many more for your best workspaces and
+            meetings
+          </p>
+          <div class="footer__icons">
+            <a class="footer__icon" target="_blank" href="#">
+              <img
+                class="footer__image"
+                src="./images/icon_instagram.svg"
+                alt="Icon instagram"
+              />
+            </a>
+            <a class="footer__icon" target="_blank" href="#">
+              <img
+                class="footer__image"
+                src="./images/icon_youtube.svg"
+                alt="Icon youtube"
+              />
+            </a>
+            <a class="footer__icon" target="_blank" href="#">
+              <img
+                class="footer__image"
+                src="./images/icon_facebook.svg"
+                alt="Icon facebook"
+              />
+            </a>
+          </div>
+        </div>
+        <nav class="footer__navigation">
+          <div class="footer__column">
+            <h4 class="footer__subtitle">Spaces</h4>
+            <ul class="footer__items">
+              <li class="footer__item">
+                <a href="#">Co-working spaces</a>
+              </li>
+              <li class="footer__item">
+                <a href="#">Meeting rooms</a>
+              </li>
+              <li class="footer__item footer__item_active">
+                <a href="#">Event spaces</a>
+              </li>
+              <li class="footer__item">
+                <a href="#">Child playground</a>
+              </li>
+              <li class="footer__item">
+                <a href="#">Cafe & resto</a>
+              </li>
+            </ul>
+          </div>
+          <div class="footer__column">
+            <h4 class="footer__subtitle">Company</h4>
+            <ul class="footer__items">
+              <li class="footer__item">
+                <a href="#">About Us</a>
+              </li>
+              <li class="footer__item">
+                <a href="#">Pricing</a>
+              </li>
+              <li class="footer__item">
+                <a href="#">Careers</a>
+              </li>
+              <li class="footer__item">
+                <a href="#">Press</a>
+              </li>
+            </ul>
+          </div>
+          <div class="footer__column">
+            <h4 class="footer__subtitle">Support</h4>
+            <ul class="footer__items">
+              <li class="footer__item">
+                <a href="#">FAQs</a>
+              </li>
+              <li class="footer__item">
+                <a href="#">Privacy Policy</a>
+              </li>
+              <li class="footer__item">
+                <a href="#">Help</a>
+              </li>
+            </ul>
+          </div>
+          <div class="footer__column">
+            <h4 class="footer__subtitle">Contact Us</h4>
+            <ul class="footer__items">
+              <li class="footer__item">
+                E.  Hello@frispes.com
+              </li>
+              <li class="footer__item">
+                A.  Jalan Jayakatwang  No.301 Ngasem, Kediri
+              </li>
+              <li class="footer__item">
+                P.  (+62) 82334670000
+              </li>
+              </li>
+            </ul>
+          </div>
+        </nav>
+      </div>
+    </footer>
   </body>
 </html>
