--- a/index.html
+++ b/index.html
@@ -259,6 +259,67 @@
         />
       </div>
     </section>
+    <section class="reviews main-content page__margin-bottom-big">
+      <div class="title-line">
+        <h2 class="title-line__title">Reviews</h2>
+        <hr class="title-line__line" />
+      </div>
+      <div class="reviews__line">
+        <h2 class="reviews__title">What our customers are saying</h2>
+        <div class="buttons-slider">
+          <button class="buttons-slider__button"></button>
+          <button
+            class="buttons-slider__button buttons-slider__button_type_right"
+          ></button>
+        </div>
+      </div>
+      <div class="reviews__container">
+        <div class="reviews__card">
+          <p class="reviews__comment">
+            Our team has been working at frispes for almost 2 months because our office still closed. 
+            During working at frispes, we feel a new experience, we can feel working with a beautiful, 
+            modern, and comfortable space. And cozy cafe with high-speed internet  in there. Thank you 
+            for frispes and team.
+          </p>
+          <div class="reviews__user">
+            <img class="reviews__photo" src="./images/user_1.png" alt="">
+            <div class="reviews__column">
+              <h4 class="reviews__user-name">Pedro Ibanez</h4>
+              <p class="reviews__position">UI Designer at Google</p>
+            </div>
+          </div>
+        </div>
+        <div class="reviews__card">
+          <p class="reviews__comment">
+            The high-speed internet at frispes was so amazing. I can get best experience when 
+            running video call with my clients. Frispes has spacious and safe parking area, 
+            that’s what i need because i used to work as freelancer for a long time.
+          </p>
+          <div class="reviews__user">
+            <img class="reviews__photo" src="./images/user_2.png" alt="">
+            <div class="reviews__column">
+              <h4 class="reviews__user-name">Raymond Thual</h4>
+              <p class="reviews__position">Professional Freelancer</p>
+            </div>
+          </div>
+        </div>
+        <div class="reviews__card">
+          <p class="reviews__comment">
+            Just three words : Frispes is Awesome!
+          </p>
+          <div class="reviews__user">
+            <img class="reviews__photo" src="./images/user_3.png" alt="">
+            <div class="reviews__column">
+              <h4 class="reviews__user-name">Yuli Berlian</h4>
+              <p class="reviews__position">IOS Dev at Tokopedia</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="loader reviews__loader">
+        <div class="loader__line"><div></div></div>
+      </div>
+    </section>
     <footer class="footer">
       <div class="footer__content main-content">
         <div class="footer__info">
