--- a/index.html
+++ b/index.html
@@ -320,6 +320,41 @@
         <div class="loader__line"><div></div></div>
       </div>
     </section>
+    <section class="faq main-content">
+      <h2 class="faq__title">
+        Find the answers to anything you need in our Help Center
+      </h2>
+      <div class="faq__container">
+        <div class="faq__card">
+          <h3 class="faq__subtitle">
+            How do I know if a space is available?
+          </h3>
+          <div class="faq__rectangle">
+            <img class="faq__icon" src="./images/arrow_down_white.svg" alt="arrow icon">
+          </div>
+        </div>
+        <div class="faq__card faq__card_orange">
+          <h3 class="faq__subtitle">
+            How do i book a space?
+          </h3>
+          <div class="faq__rectangle faq__rectangle_white">
+            <img class="faq__icon" src="./images/arrow_down_orange.svg" alt="arrow icon">
+          </div>
+        </div>
+        <div class="faq__card">
+          <h3 class="faq__subtitle">
+            How do reviews work?
+          </h3>
+          <div class="faq__rectangle">
+            <img class="faq__icon" src="./images/arrow_down_white.svg" alt="arrow icon">
+          </div>
+        </div>
+      </div>
+      <button class="faq__button">
+        More questions
+        <img class="faq__icon-button" src="./images/arrow_right_orange.svg" alt="arrow right">
+      </button>
+    </section>
     <footer class="footer">
       <div class="footer__content main-content">
         <div class="footer__info">
