--- a/index.html
+++ b/index.html
@@ -281,11 +281,11 @@
             modern, and comfortable space. And cozy cafe with high-speed internet  in there. Thank you 
             for frispes and team.
           </p>
-          <div class="reviews__user">
-            <img class="reviews__photo" src="./images/user_1.png" alt="">
-            <div class="reviews__column">
-              <h4 class="reviews__user-name">Pedro Ibanez</h4>
-              <p class="reviews__position">UI Designer at Google</p>
+          <div class="user-block">
+            <img class="user-block__photo" src="./images/user_1.png" alt="Pedro Ibanez">
+            <div class="user-block__column">
+              <h4 class="user-block__user-name">Pedro Ibanez</h4>
+              <p class="ser-block__position">UI Designer at Google</p>
             </div>
           </div>
         </div>
@@ -295,11 +295,11 @@
             running video call with my clients. Frispes has spacious and safe parking area, 
             that’s what i need because i used to work as freelancer for a long time.
           </p>
-          <div class="reviews__user">
-            <img class="reviews__photo" src="./images/user_2.png" alt="">
-            <div class="reviews__column">
-              <h4 class="reviews__user-name">Raymond Thual</h4>
-              <p class="reviews__position">Professional Freelancer</p>
+          <div class="user-block">
+            <img class="user-block__photo" src="./images/user_2.png" alt="Raymond Thual">
+            <div class="user-block__column">
+              <h4 class="user-block__user-name">Raymond Thual</h4>
+              <p class="ser-block__position">Professional Freelancer</p>
             </div>
           </div>
         </div>
@@ -307,11 +307,11 @@
           <p class="reviews__comment">
             Just three words : Frispes is Awesome!
           </p>
-          <div class="reviews__user">
-            <img class="reviews__photo" src="./images/user_3.png" alt="">
-            <div class="reviews__column">
-              <h4 class="reviews__user-name">Yuli Berlian</h4>
-              <p class="reviews__position">IOS Dev at Tokopedia</p>
+          <div class="user-block">
+            <img class="user-block__photo" src="./images/user_3.png" alt="Yuli Berlian">
+            <div class="user-block__column">
+              <h4 class="user-block__user-name">Yuli Berlian</h4>
+              <p class="ser-block__position">IOS Dev at Tokopedia</p>
             </div>
           </div>
         </div>
@@ -350,10 +350,90 @@
           </div>
         </div>
       </div>
-      <button class="faq__button">
-        More questions
-        <img class="faq__icon-button" src="./images/arrow_right_orange.svg" alt="arrow right">
+      <button class="button-naked faq__button">
+        <p>More questions</p>
+        <img class="button-naked__icon-button" src="./images/arrow_right_orange.svg" alt="arrow right">
       </button>
+    </section>
+    <section class="insights">
+      <div class="main-content">
+        <div class="insights__line">
+          <h2 class="insights__title">
+            News, events and insights for you
+          </h2>
+          <button class="button-naked">
+            <p>See more</p>
+            <img class="button-naked__icon-button" src="./images/arrow_right_orange.svg" alt="arrow right">
+          </button>
+        </div>
+        <div class="insights__news">
+          <div class="insights__big-card">
+            <img class="insights__img" src="./images/meeting_google.png" alt="Meeting in Google">
+            <div class="insights__content">
+              <div>
+                <h3 class="insights__subtitle">
+                  Google I / O 2020 news update
+                </h3>
+                <p class="insights__text">
+                  Out of concern for the health and safety of our developers, 
+                  employees, and local communities — and in line with recent ...
+                </p>
+              </div>
+              <div class="user-block">
+                <img class="user-block__photo" src="./images/user_2.png" alt="Sundar pichai">
+                <div class="user-block__column">
+                  <h4 class="user-block__user-name user-block__user-name_color_black">Sundar pichai</h4>
+                  <p class="user-block__position user-block__position_color_grey">CEO at Google</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="news-card insights__card">
+            <img class="news-card__image" src="./images/laptop_on_table.png" alt="laptop on the table">
+            <div class="news-card__content">
+              <h3 class="news-card__title">
+                Minimal workspace for inspirations
+              </h3>
+              <p class="news-card__text">
+                Anthony Masional
+              </p>
+            </div>
+          </div>
+          <div class="news-card">
+            <img class="news-card__image" src="./images/man_read_book.png" alt="man is reading a book">
+            <div class="news-card__content">
+              <h3 class="news-card__title">
+                Does productivity increase when working remotely ? 
+              </h3>
+              <p class="news-card__text">
+                Franck Martin
+              </p>
+            </div>
+          </div>
+          <div class="news-card insights__card">
+            <img class="news-card__image" src="./images/meeting_in_office.png" alt="meeting in the office">
+            <div class="news-card__content">
+              <h3 class="news-card__title">
+                Morning routine to boost your mood
+              </h3>
+              <p class="news-card__text">
+                Elizabeth swan
+              </p>
+            </div>
+          </div>
+          <div class="news-card insights__card">
+            <img class="news-card__image" src="./images/laptop_on_table.png" alt="laptop on the table">
+            <div class="news-card__content">
+              <h3 class="news-card__title">
+                5+ tips to find comfortable co-working space
+              </h3>
+              <p class="news-card__text">
+                Mykola Ilschenko
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
     <footer class="footer">
       <div class="footer__content main-content">
