feat: add gallery

--- a/index.html
+++ b/index.html
@@ -221,6 +221,27 @@
         <img class="facilites__image" src="./images/bar.png" alt="Bar" />
       </div>
     </section>
+    <section class="gallery page__margin-bottom-big">
+      <div class="gallery__info main-content">
+        <div class="title-line">
+          <h2 class="title-line__title">Frispes gallery</h2>
+          <hr class="title-line__line" />
+        </div>
+        <h2 class="gallery__title">
+          Immersive beautiful co-working space gallery
+        </h2>
+        <div class="buttons-slider">
+          <button class="buttons-slider__button"></button>
+          <button
+            class="buttons-slider__button buttons-slider__button_type_right"
+          ></button>
+        </div>
+      </div>
+      <img class="gallery__image" src="./images/office_space_1.png" alt="Office space">
+      <img class="gallery__image gallery__image_active" src="./images/office_space_2.png" alt="Office space">
+      <img class="gallery__image" src="./images/office_space_3.png" alt="Office space">
+      <img class="gallery__image" src="./images/office_space_4.png" alt="Office space">
+    </section>
     <section class="uses main-content page__margin-bottom-big">
       <h2 class="uses__title">Who uses Frispes?</h2>
       <p class="uses__subtitle">
