fix: correct some styles

--- a/index.html
+++ b/index.html
@@ -237,10 +237,26 @@
           ></button>
         </div>
       </div>
-      <img class="gallery__image" src="./images/office_space_1.png" alt="Office space">
-      <img class="gallery__image gallery__image_active" src="./images/office_space_2.png" alt="Office space">
-      <img class="gallery__image" src="./images/office_space_3.png" alt="Office space">
-      <img class="gallery__image" src="./images/office_space_4.png" alt="Office space">
+      <img
+        class="gallery__image"
+        src="./images/office_space_1.png"
+        alt="Office space"
+      />
+      <img
+        class="gallery__image gallery__image_active"
+        src="./images/office_space_2.png"
+        alt="Office space"
+      />
+      <img
+        class="gallery__image"
+        src="./images/office_space_3.png"
+        alt="Office space"
+      />
+      <img
+        class="gallery__image"
+        src="./images/office_space_4.png"
+        alt="Office space"
+      />
     </section>
     <section class="uses main-content page__margin-bottom-big">
       <h2 class="uses__title">Who uses Frispes?</h2>
@@ -297,13 +313,18 @@
       <div class="reviews__container">
         <div class="reviews__card">
           <p class="reviews__comment">
-            Our team has been working at frispes for almost 2 months because our office still closed. 
-            During working at frispes, we feel a new experience, we can feel working with a beautiful, 
-            modern, and comfortable space. And cozy cafe with high-speed internet  in there. Thank you 
-            for frispes and team.
+            Our team has been working at frispes for almost 2 months because our
+            office still closed. During working at frispes, we feel a new
+            experience, we can feel working with a beautiful, modern, and
+            comfortable space. And cozy cafe with high-speed internet in there.
+            Thank you for frispes and team.
           </p>
           <div class="user-block">
-            <img class="user-block__photo" src="./images/user_1.png" alt="Pedro Ibanez">
+            <img
+              class="user-block__photo"
+              src="./images/user_1.png"
+              alt="Pedro Ibanez"
+            />
             <div class="user-block__column">
               <h4 class="user-block__user-name">Pedro Ibanez</h4>
               <p class="ser-block__position">UI Designer at Google</p>
@@ -312,12 +333,17 @@
         </div>
         <div class="reviews__card">
           <p class="reviews__comment">
-            The high-speed internet at frispes was so amazing. I can get best experience when 
-            running video call with my clients. Frispes has spacious and safe parking area, 
-            that’s what i need because i used to work as freelancer for a long time.
+            The high-speed internet at frispes was so amazing. I can get best
+            experience when running video call with my clients. Frispes has
+            spacious and safe parking area, that’s what i need because i used to
+            work as freelancer for a long time.
           </p>
           <div class="user-block">
-            <img class="user-block__photo" src="./images/user_2.png" alt="Raymond Thual">
+            <img
+              class="user-block__photo"
+              src="./images/user_2.png"
+              alt="Raymond Thual"
+            />
             <div class="user-block__column">
               <h4 class="user-block__user-name">Raymond Thual</h4>
               <p class="ser-block__position">Professional Freelancer</p>
@@ -325,11 +351,13 @@
           </div>
         </div>
         <div class="reviews__card">
-          <p class="reviews__comment">
-            Just three words : Frispes is Awesome!
-          </p>
+          <p class="reviews__comment">Just three words : Frispes is Awesome!</p>
           <div class="user-block">
-            <img class="user-block__photo" src="./images/user_3.png" alt="Yuli Berlian">
+            <img
+              class="user-block__photo"
+              src="./images/user_3.png"
+              alt="Yuli Berlian"
+            />
             <div class="user-block__column">
               <h4 class="user-block__user-name">Yuli Berlian</h4>
               <p class="ser-block__position">IOS Dev at Tokopedia</p>
@@ -347,110 +375,148 @@
       </h2>
       <div class="faq__container">
         <div class="faq__card">
-          <h3 class="faq__subtitle">
-            How do I know if a space is available?
-          </h3>
+          <h3 class="faq__subtitle">How do I know if a space is available?</h3>
           <div class="faq__rectangle">
-            <img class="faq__icon" src="./images/arrow_down_white.svg" alt="arrow icon">
+            <img
+              class="faq__icon"
+              src="./images/arrow_down_white.svg"
+              alt="arrow icon"
+            />
           </div>
         </div>
         <div class="faq__card faq__card_orange">
-          <h3 class="faq__subtitle">
+          <h3 class="faq__subtitle faq__subtitle_color_white">
             How do i book a space?
           </h3>
           <div class="faq__rectangle faq__rectangle_white">
-            <img class="faq__icon" src="./images/arrow_down_orange.svg" alt="arrow icon">
+            <img
+              class="faq__icon"
+              src="./images/arrow_down_orange.svg"
+              alt="arrow icon"
+            />
           </div>
         </div>
         <div class="faq__card">
-          <h3 class="faq__subtitle">
-            How do reviews work?
-          </h3>
+          <h3 class="faq__subtitle">How do reviews work?</h3>
           <div class="faq__rectangle">
-            <img class="faq__icon" src="./images/arrow_down_white.svg" alt="arrow icon">
+            <img
+              class="faq__icon"
+              src="./images/arrow_down_white.svg"
+              alt="arrow icon"
+            />
           </div>
         </div>
       </div>
       <button class="button-naked faq__button">
-        <p>More questions</p>
-        <img class="button-naked__icon-button" src="./images/arrow_right_orange.svg" alt="arrow right">
+        <span>More questions</span>
+        <img
+          class="button-naked__icon-button"
+          src="./images/arrow_right_orange.svg"
+          alt="arrow right"
+        />
       </button>
     </section>
     <section class="insights">
       <div class="main-content">
         <div class="insights__line">
-          <h2 class="insights__title">
-            News, events and insights for you
-          </h2>
+          <h2 class="insights__title">News, events and insights for you</h2>
           <button class="button-naked">
-            <p>See more</p>
-            <img class="button-naked__icon-button" src="./images/arrow_right_orange.svg" alt="arrow right">
+            <span>See more</span>
+            <img
+              class="button-naked__icon-button"
+              src="./images/arrow_right_orange.svg"
+              alt="arrow right"
+            />
           </button>
         </div>
         <div class="insights__news">
           <div class="insights__big-card">
-            <img class="insights__img" src="./images/meeting_google.png" alt="Meeting in Google">
+            <img
+              class="insights__img"
+              src="./images/meeting_google.png"
+              alt="Meeting in Google"
+            />
             <div class="insights__content">
               <div>
                 <h3 class="insights__subtitle">
                   Google I / O 2020 news update
                 </h3>
                 <p class="insights__text">
-                  Out of concern for the health and safety of our developers, 
+                  Out of concern for the health and safety of our developers,
                   employees, and local communities — and in line with recent ...
                 </p>
               </div>
               <div class="user-block">
-                <img class="user-block__photo" src="./images/user_2.png" alt="Sundar pichai">
+                <img
+                  class="user-block__photo"
+                  src="./images/user_2.png"
+                  alt="Sundar pichai"
+                />
                 <div class="user-block__column">
-                  <h4 class="user-block__user-name user-block__user-name_color_black">Sundar pichai</h4>
-                  <p class="user-block__position user-block__position_color_grey">CEO at Google</p>
+                  <h4
+                    class="user-block__user-name user-block__user-name_color_black"
+                  >
+                    Sundar pichai
+                  </h4>
+                  <p
+                    class="user-block__position user-block__position_color_grey"
+                  >
+                    CEO at Google
+                  </p>
                 </div>
               </div>
             </div>
           </div>
           <div class="news-card insights__card">
-            <img class="news-card__image" src="./images/laptop_on_table.png" alt="laptop on the table">
+            <img
+              class="news-card__image"
+              src="./images/laptop_on_table.png"
+              alt="laptop on the table"
+            />
             <div class="news-card__content">
               <h3 class="news-card__title">
                 Minimal workspace for inspirations
               </h3>
-              <p class="news-card__text">
-                Anthony Masional
-              </p>
+              <p class="news-card__text">Anthony Masional</p>
             </div>
           </div>
           <div class="news-card">
-            <img class="news-card__image" src="./images/man_read_book.png" alt="man is reading a book">
+            <img
+              class="news-card__image"
+              src="./images/man_read_book.png"
+              alt="man is reading a book"
+            />
             <div class="news-card__content">
               <h3 class="news-card__title">
-                Does productivity increase when working remotely ? 
+                Does productivity increase when working remotely ?
               </h3>
-              <p class="news-card__text">
-                Franck Martin
-              </p>
+              <p class="news-card__text">Franck Martin</p>
             </div>
           </div>
           <div class="news-card insights__card">
-            <img class="news-card__image" src="./images/meeting_in_office.png" alt="meeting in the office">
+            <img
+              class="news-card__image"
+              src="./images/meeting_in_office.png"
+              alt="meeting in the office"
+            />
             <div class="news-card__content">
               <h3 class="news-card__title">
                 Morning routine to boost your mood
               </h3>
-              <p class="news-card__text">
-                Elizabeth swan
-              </p>
+              <p class="news-card__text">Elizabeth swan</p>
             </div>
           </div>
           <div class="news-card insights__card">
-            <img class="news-card__image" src="./images/laptop_on_table.png" alt="laptop on the table">
+            <img
+              class="news-card__image"
+              src="./images/laptop_on_table.png"
+              alt="laptop on the table"
+            />
             <div class="news-card__content">
               <h3 class="news-card__title">
                 5+ tips to find comfortable co-working space
               </h3>
-              <p class="news-card__text">
-                Mykola Ilschenko
-              </p>
+              <p class="news-card__text">Mykola Ilschenko</p>
             </div>
           </div>
         </div>
@@ -544,16 +610,11 @@
           <div class="footer__column">
             <h4 class="footer__subtitle">Contact Us</h4>
             <ul class="footer__items">
+              <li class="footer__item">E. Hello@frispes.com</li>
               <li class="footer__item">
-                E.  Hello@frispes.com
+                A. Jalan Jayakatwang No.301 Ngasem, Kediri
               </li>
-              <li class="footer__item">
-                A.  Jalan Jayakatwang  No.301 Ngasem, Kediri
-              </li>
-              <li class="footer__item">
-                P.  (+62) 82334670000
-              </li>
-              </li>
+              <li class="footer__item">P. (+62) 82334670000</li>
             </ul>
           </div>
         </nav>
